--- a/index.html
+++ b/index.html
@@ -77,20 +77,25 @@
 
     /* Tilted video box */
     .hero-video {
-    position: absolute;
-    top: 180px;
-    right: 0px;
+    position: relative;
+    top: 400px;
+    left: 800px;
     width: 40%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.6);
     z-index: 0;
     border-radius: 5px;
     overflow: hidden;
+    transition: transform 0.3s ease;
     }
 
     .hero-video video {
     width: 100%;
     display: block;
     border-radius: 2px;
+    }
+
+    .hero-video:hover{
+      transform: scale(1.3);
     }
 
     /* CARD SECTION */
@@ -163,6 +168,16 @@
         padding: 30px 5%;
       }
     }
+
+      .card-section{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+        
+        gap:10px
+
+      }
+    
+
   </style>
 </head>
 <body>
@@ -209,7 +224,35 @@
       <h3>Smart Interior</h3>
       <p>Includes voice assistant, panoramic HUD, memory seats, and climate AI.</p>
     </div>
+    <div class="card">
+      <h3>Smart Interior</h3>
+      <p>Includes voice assistant, panoramic HUD, memory seats, and climate AI.</p>
+    </div>
+    <div class="card">
+      <h3>Smart Interior</h3>
+      <p>Includes voice assistant, panoramic HUD, memory seats, and climate AI.</p>
+    </div>
   </section>
 
+  <section>
+    <h2>Information</h2>
+      <label for="name">Your Name:</label>
+        <input type="text" id="name" placeholder="Enter your name">
+        <br>
+        <label for="gender">Your Gender</label> 
+        <input type="radio" name="gender" id="male"> <label for="male">Male</label>
+        <input type="radio" name="gender" id="female"><label for="female">Female</label>
+        <br>
+        <label for="date">Your Date oF Birth:</label>
+        <input type="date" id="date">
+        <br>
+        <label for="email">Your Email:</label>
+        <input type="text" id=""email placeholder="Enter your email">
+        <br>
+  </section>
+
+  <footer style="background-color: pink ;padding: 300px;text-align: center;">
+    &copy;2025 Programming4
+  </footer>
 </body>
 </html>
