--- a/index.html
+++ b/index.html
@@ -234,24 +234,28 @@
     </div>
   </section>
 
-  <section>
-    <h2>Information</h2>
-      <label for="name">Your Name:</label>
-        <input type="text" id="name" placeholder="Enter your name">
+  <section style="border: #8dbaea solid; border-radius: 15px; background-color:#8dbaea  ;text-align: center; font-size: 20px;">
+    <br>
+    <h1 style="text-align: center;">Information</h2>
+    <br>
+      <label for="name" style="text-align: center;">Your Name:</label><br>
+        <input type="text" id="name" placeholder="Enter your name" style="border-radius: 50px; height: 30px;width: 500px;">
         <br>
-        <label for="gender">Your Gender</label> 
+        <label for="gender">Your Gender</label><br> 
         <input type="radio" name="gender" id="male"> <label for="male">Male</label>
         <input type="radio" name="gender" id="female"><label for="female">Female</label>
         <br>
-        <label for="date">Your Date oF Birth:</label>
-        <input type="date" id="date">
+        <label for="date">Your Date oF Birth:</label><br>
+        <input type="date" id="date" style="border-radius: 50px; height: 30px;width: 500px;">
         <br>
-        <label for="email">Your Email:</label>
-        <input type="text" id=""email placeholder="Enter your email">
-        <br>
+        <label for="email">Your Email:</label><br>
+        <input type="text" id=""email placeholder="Enter your email" style="border-radius: 50px; height: 30px;width: 500px;">
+        <br><br><br>
+        <button type="submit" style="border-radius: 15px;height: 40px;width: 100px;">Submit</button>
+        <br><br><br><br><br>
   </section>
 
-  <footer style="background-color: pink ;padding: 300px;text-align: center;">
+  <footer style="background-color: rgb(84, 84, 84) ;padding: 10px;text-align: center; color: white;">
     &copy;2025 Programming4
   </footer>
 </body>
